# copula-wrapper

./: .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml
copula_wrapper/: __init__.py  correlation_convert.py  joint_distribution.py
tests/: __init__.py  conftest.py  copula_param.py  seeds.py  shared.py  test_copula_param.py  test_docs_do_not_raise.py  test_end_to_end_correlation.py  test_end_to_end_high_dimension.py  test_end_to_end_marginals.py  test_readme_does_not_raise.py  test_validate_rank_corr.py
tests/e2e/: __init__.py  test_8_dimensional.py  test_correlation.py  test_marginals.py
