[tool.poetry]
name = "copula-wrapper"
version = "0.0.1"
description = ""
authors = ["tadamcz <tmkadamcz@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy = "^1.8.1"
numpy = "^1.23.0"
pandas = "^1.4.3"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-xdist = "^2.5.0"
nonstd = { git = "https://github.com/tadamcz/nonstd", rev = "d0066c13ef3d401817a75e681276348ebb657c7a" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

