[tool]
[tool.poetry]
name = "copula_wrapper"
version = "0.1.6"
homepage = "https://github.com/tadamcz/copula-wrapper"
description = "Top-level package for statsmodels copula wrapper."
authors = ["Tom Adamczewski <tadamczewskipublic@gmail.com>"]
readme = "README.md"
classifiers=[
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
]
packages = [
    { include = "copula_wrapper" },
    { include = "tests", format = "sdist" },
]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scipy = "^1.11.0"
numpy = "^1.23.0"
pandas = "^2.0.3"
statsmodels = ">=0.14.0"

[tool.poetry.group.dev.dependencies]
bump2version = "*"
coverage = "*"
pytest = ">=7.2.0"
pytest-pycharm = "*"
pytest-xdist = "^2.5.0"
rvtools = "^0.1.2"
black = {extras = ["d"], version = "*"}
matplotlib = "^3.7.1"
mkcodes = "^0.1.1"
seaborn = "^0.12"
vulture = "^2.7"


[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"


